[gd_scene load_steps=11 format=2]

[ext_resource path="res://Enemies/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemies/Pirate1_run.png" type="Texture" id=2]
[ext_resource path="res://Enemies/PirateEnemy.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 26 )

[sub_resource type="Animation" id=4]
resource_name = "Idle"
length = 2.2
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Run"
length = 1.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13 ]
}

[sub_resource type="CapsuleShape2D" id=2]
radius = 14.0
height = 36.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 13.4012, 26.9604 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 27.3625, 23.4817 )

[node name="PirateEnemy" instance=ExtResource( 1 )]
scale = Vector2( 0.5, 0.5 )
collision_mask = 3
script = ExtResource( 3 )
MAX_SPEED = 30
WALKING_DIRECTION = 1

[node name="Sprite" parent="." index="0"]
position = Vector2( 0, -32 )
texture = ExtResource( 2 )
flip_h = true
hframes = 14
frame = 1

[node name="Collider" parent="." index="1"]
position = Vector2( 2, -26 )
shape = SubResource( 1 )

[node name="FloorLeft" type="RayCast2D" parent="." index="2"]
position = Vector2( -4, 0 )
enabled = true
cast_to = Vector2( 0, 6 )
collision_mask = 2

[node name="FloorRight" type="RayCast2D" parent="." index="3"]
position = Vector2( 8, 0 )
enabled = true
cast_to = Vector2( 0, 6 )
collision_mask = 2

[node name="WallLeft" type="RayCast2D" parent="." index="4"]
position = Vector2( 0, -8 )
enabled = true
cast_to = Vector2( -6, 0 )
collision_mask = 2

[node name="WallRight" type="RayCast2D" parent="." index="5"]
position = Vector2( 0, -8 )
enabled = true
cast_to = Vector2( 6, 0 )
collision_mask = 2

[node name="SpriteAnimator" parent="." index="6"]
anims/Idle = SubResource( 4 )
anims/RESET = SubResource( 5 )
anims/Run = SubResource( 6 )

[node name="Collider" parent="Hurtbox" index="0"]
position = Vector2( 2, -26 )
shape = SubResource( 2 )

[node name="Collider" parent="Hitbox" index="0"]
position = Vector2( 1.88988, -27.0883 )
shape = SubResource( 3 )

[node name="EnemyStats" parent="." index="9"]
max_health = 2

[node name="Collider" parent="Viewbox" index="0"]
position = Vector2( 0.965179, -21.4994 )
rotation = -3.14159
scale = Vector2( 4.47691, -3.04494 )
shape = SubResource( 7 )

[connection signal="hit" from="Hurtbox" to="." method="_on_Hurtbox_hit"]

[editable path="Hurtbox"]
[editable path="Hitbox"]
[editable path="Viewbox"]
